Respond to review
https://github.com/inbo/presentations/pull/10#pullrequestreview-34861940

--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Supporting scientific research at the INBO"
+title: "Supporting scientific research at INBO"
 author: "D. Brosens, P. Desmet, D. Du Seuil, I. Jansen, E. Lommelen, J. Loos, T. Milotic, T. Onkelinx, P. Quataert, F. Piesschaert, H. Van Calster, T. Van Daele, F. Vanderhaeghe, G. Van Spaendonck, S. Van Hoey, P. Verschelde, T. Westra, C. Wils"
 date: "April 28, 2017"
 output:
@@ -174,7 +174,7 @@ dataset %>%
 > - Focus on early adopters and early majority
 > - Stimulation and support is vital
 > - New procedures should lower the burden in the long run
-> - Qllow for a long transition period before enforcing change
+> - Allow for a long transition period before enforcing change
 
 ## Designing and evaluating long term monitoring
 
