Overview of types of data (to be completed)

--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -166,6 +166,27 @@ dataset %>%
 
 # Open data & open research
 
+###
+
+*image of BWK monitoring*
+
+###
+
+*image of seabirds at sea monitoring*
+
+###
+
+*image of bird with tracker*
+
+###
+
+*image of WATINA monitoring*
+
+###
+
+*image of lab analysis*
+
+
 # Towards supporting policy based on open science
 
 ### Rome wasn't built in a day
