List core tasks of data lab team

--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -164,7 +164,7 @@ dataset %>%
 
 ![](vegetation.jpg)\ 
 
-# Open data & open research
+# Data lab
 
 ###
 
@@ -185,6 +185,29 @@ dataset %>%
 ###
 
 *image of lab analysis*
+
+## Support scientific staff in data life cycle
+
+### Build and maintain data infrastructure
+
+> - Manage major data systems
+> - Setup data warehouses for uniform data access
+> - Setup GIS services
+> - Design data models for new systems
+> - Coordinate development of new data collection tools
+
+### Provide research software
+
+> - Data processing tools
+> - GIS tools
+> - Reporting tools
+
+### Provide support
+
+> - Documentation
+> - Tutorials
+> - Training
+> - Ad hoc support
 
 
 # Towards supporting policy based on open science
