--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -22,8 +22,7 @@ output:
 library(knitr)
 opts_chunk$set(
   echo = FALSE,
-  cache = TRUE,
-  autodep = TRUE
+  warning = FALSE
 )
 library(lme4)
 library(dplyr)
@@ -84,6 +83,157 @@ science <- staff - admin - sum(wo) - management
 ![](KLEURORGANIGRAM_def.png)
 
 # Biometry, Methodology & Quality assurance
+
+## Methodological support
+
+###
+
+#### Sir Ronald Aylmer Fisher
+
+To call in the statistician after the experiment is done may be no more than asking him to perform a post-mortem examination: he may be able to say what the experiment died of.
+
+### Partner during the entire lifecycle of research
+
+```{r paper}
+dataset <- frame_data(
+  ~Title, ~X, ~Y, ~Hjust, ~Vjust, ~Step, ~Bullets,
+  "Knowledge", 0, 1.5, 0.5, 0.5, -1, "",
+  "Data", 0, -1.5, 0.5, 0.5, -1, "",
+  "Design", 1.5, 0, 0.5, 0.5, -1, "",
+  "Inference", -1.5, 0, 0.5, 0.5, -1, "",
+  "Discussion", -1.2, 1.1, 0, 1, 4,
+"- Interpretation results
+- Scope model
+- Validity of research
+- Policy recommendations
+- Policy tools",
+  "Introduction", 0.2, 1.1,  0, 1, 1,
+"- Concept
+- Hypothesis
+- Motivation",
+  "Materials & Methods", 0.2, -0.1,  0, 1, 2,
+"- Design
+- Sampling
+- Sample size
+- Field protocol
+- Statistical analysis",
+  "Results", -1.2, -0.1,  0, 1, 3,
+"- Good statistical practices
+- Technical support
+- Statistical interpretation"
+) 
+dataset %>%
+  mutate(
+    Bullets = ifelse(Step <= -1, Bullets, ""),
+    Title = ifelse(Step == -1, NA, Title)
+  ) %>%
+  ggplot(aes(x = X, y = Y)) +
+  geom_text(aes(label = Bullets, y = Y - 0.3), hjust = 0, vjust = 1, size = 2, colour = inbo.hoofd) +
+  geom_label(
+    aes(label = Title, hjust = Hjust, vjust = Vjust, colour = Step == -1), 
+    size = 3, 
+    show.legend = FALSE
+  ) +
+  theme_blank() +
+  scale_x_continuous(expand = c(0.1, 0))
+```
+
+### Partner during the entire lifecycle of research
+
+```{r paper0}
+dataset %>%
+  mutate(Bullets = ifelse(Step <= 0, Bullets, "")) %>%
+  ggplot(aes(x = X, y = Y)) +
+  geom_vline(xintercept = 0, linetype = 2) +
+  geom_hline(yintercept = 0, linetype = 2) +
+  geom_text(aes(label = Bullets, y = Y - 0.3), hjust = 0, vjust = 1, size = 2, colour = inbo.hoofd) +
+  geom_label(
+    aes(label = Title, hjust = Hjust, vjust = Vjust, colour = Step == -1), 
+    size = 3, 
+    show.legend = FALSE
+  ) +
+  theme_blank() +
+  scale_x_continuous(expand = c(0.1, 0))
+```
+
+### Partner during the entire lifecycle of research
+
+```{r paper1}
+dataset %>%
+  mutate(Bullets = ifelse(Step <= 1, Bullets, "")) %>%
+  ggplot(aes(x = X, y = Y)) +
+  geom_vline(xintercept = 0, linetype = 2) +
+  geom_hline(yintercept = 0, linetype = 2) +
+  geom_text(aes(label = Bullets, y = Y - 0.3), hjust = 0, vjust = 1, size = 2, colour = inbo.hoofd) +
+  geom_label(
+    aes(label = Title, hjust = Hjust, vjust = Vjust, colour = Step == -1), 
+    size = 3, 
+    show.legend = FALSE
+  ) +
+  theme_blank() +
+  scale_x_continuous(expand = c(0.1, 0))
+```
+
+### Partner during the entire lifecycle of research
+
+```{r paper2}
+dataset %>%
+  mutate(Bullets = ifelse(Step <= 2, Bullets, "")) %>%
+  ggplot(aes(x = X, y = Y)) +
+  geom_vline(xintercept = 0, linetype = 2) +
+  geom_hline(yintercept = 0, linetype = 2) +
+  geom_text(aes(label = Bullets, y = Y - 0.3), hjust = 0, vjust = 1, size = 2, colour = inbo.hoofd) +
+  geom_label(
+    aes(label = Title, hjust = Hjust, vjust = Vjust, colour = Step == -1), 
+    size = 3, 
+    show.legend = FALSE
+  ) +
+  theme_blank() +
+  scale_x_continuous(expand = c(0.1, 0))
+```
+
+### Partner during the entire lifecycle of research
+
+```{r paper3}
+dataset %>%
+  mutate(Bullets = ifelse(Step <= 3, Bullets, "")) %>%
+  ggplot(aes(x = X, y = Y)) +
+  geom_vline(xintercept = 0, linetype = 2) +
+  geom_hline(yintercept = 0, linetype = 2) +
+  geom_text(aes(label = Bullets, y = Y - 0.3), hjust = 0, vjust = 1, size = 2, colour = inbo.hoofd) +
+  geom_label(
+    aes(label = Title, hjust = Hjust, vjust = Vjust, colour = Step == -1), 
+    size = 3, 
+    show.legend = FALSE
+  ) +
+  theme_blank() +
+  scale_x_continuous(expand = c(0.1, 0))
+```
+
+### Partner during the entire lifecycle of research
+
+```{r paper4}
+dataset %>%
+  ggplot(aes(x = X, y = Y)) +
+  geom_vline(xintercept = 0, linetype = 2) +
+  geom_hline(yintercept = 0, linetype = 2) +
+  geom_text(aes(label = Bullets, y = Y - 0.3), hjust = 0, vjust = 1, size = 2, colour = inbo.hoofd) +
+  geom_label(
+    aes(label = Title, hjust = Hjust, vjust = Vjust, colour = Step == -1), 
+    size = 3, 
+    show.legend = FALSE
+  ) +
+  theme_blank() +
+  scale_x_continuous(expand = c(0.1, 0))
+```
+
+### Acquisition, development and maintainance of methodologies
+
+> - Concept for setting up long term monitoring
+> - Field protocols
+> - Novel statistical techniques
+> - Automation of recurring analyses
+> - Traceability of analyses
 
 ## Statistical support
 
@@ -147,29 +297,6 @@ wordcloud(
 ### Improve statistical skills of scientific staff
 
 ![](20150628_0386.jpg)\ 
-
-## Methodological support
-
-###
-
-#### Sir Ronald Aylmer Fisher
-
-To call in the statistician after the experiment is done may be no more than asking him to perform a post-mortem examination: he may be able to say what the experiment died of.
-
-### Partner during the entire life cycle of research
-
-> - Refine hypotheses
-> - Experimental design
-> - Statistical analysis
-> - Report results
-
-### Acquisition, development and maintainance of methodologies
-
-> - Concept for setting up long term monitoring
-> - Field protocols
-> - Novel statistical techniques
-> - Automation of recurring analyses
-> - Traceability of analyses
 
 ## Statistical expertise
 
