--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -108,8 +108,8 @@ dataset <- frame_data(
   "Design", 1.5, 0, 0.5, 0.5, -1, "",
   "Inference", -1.5, 0, 0.5, 0.5, -1, "",
   "Discussion", -1.2, 1.1, 0, 1, 4,
-"- Interpretation results
-- Scope model
+"- Interpretation of results
+- Scope of the model
 - Validity of research
 - Policy recommendations
 - Policy tools",
