add figure with distance based vegetation cover

--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -358,9 +358,7 @@ dataset %>%
 
 ### Methods that strike a good balance between observer error, sampling error and costs
 
-> - Distance based estimates of vegetation cover
-
-![](vegetation.jpg)\ 
+![Estimating vegetation cover](point_distance.png)
 
 # Open data & open research
 
